# app/model/internal/resource.go
@@ -1,0 +1,28 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. DO NOT EDIT THIS FILE MANUALLY.
+// ==========================================================================
+
+package internal
+
+import (
+	"github.com/gogf/gf/os/gtime"
+)
+
+// Resource is the golang structure for table admin_resource.
+type Resource struct {
+	Id        int64       `orm:"id,primary" json:"id"`        //
+	ParentId  int64       `orm:"parent_id"  json:"parentId"`  // 父资源id
+	Name      string      `orm:"name"       json:"name"`      // 资源名称
+	Alias     string      `orm:"alias"      json:"alias"`     // 资源别称
+	Url       string      `orm:"url"        json:"url"`       // 资源路径
+	Enable    bool        `orm:"enable"     json:"enable"`    // 0:不显示，1显示
+	Icon      string      `orm:"icon"       json:"icon"`      // 资源图标
+	Type      string      `orm:"type"       json:"type"`      // 资源类型：menu-菜单；button-按钮；link-链接
+	Sn        int         `orm:"sn"         json:"sn"`        // 排序
+	CreateBy  int64       `orm:"create_by"  json:"createBy"`  // 创建人
+	CreatedAt *gtime.Time `orm:"created_at" json:"createdAt"` // 创建时间
+	UpdatedBy int64       `orm:"updated_by" json:"updatedBy"` // 更新人
+	UpdatedAt *gtime.Time `orm:"updated_at" json:"updatedAt"` // 更新时间
+	DeleteBy  int64       `orm:"delete_by"  json:"deleteBy"`  // 删除人
+	DeletedAt *gtime.Time `orm:"deleted_at" json:"deletedAt"` // 删除时间时间
+}
