# app/model/resource.go
@@ -1,0 +1,26 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. Fill this file as you wish.
+// ==========================================================================
+
+package model
+
+import (
+	"gf-vue3-admin-server/app/model/internal"
+)
+
+// Resource is the golang structure for table admin_resource.
+type Resource internal.Resource
+
+// Fill with you ideas below.
+
+// CreateResourceReq add resource param
+type CreateResourceReq struct {
+	ParentId int64  `json:"parentId"`                                                       // 父资源id
+	Name     string `json:"name" v:"name@required#资源名称不能为空"`                                // 资源名称
+	Alias    string `json:"alias"`                                                          // 资源别称
+	Url      string `json:"url"`                                                            // 资源路径
+	Enable   bool   `json:"enable"`                                                         // 0:不显示，1显示
+	Icon     string `json:"icon"`                                                           // 资源图标
+	Type     string `json:"type" v:"name@required|in:menu,button,link#资源类型不能为空|请选择正确的资源类型"` // 资源类型：menu-菜单；button-按钮；link-链接
+	Sn       int    `json:"sn"`                                                             // 排序
+}
